IAMP Server added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <p>Upload <span><a href="https://github.com/PHPMailer/PHPMailer/archive/master.zip">and</a></span> Download your files</p>
+    <p>Upload and Download your files</p>
     <div class="container">
         <!--button to upload files -->
         <div class="upload-btn">
@@ -13,6 +13,9 @@
         </div>
         <div class="upload-btn">
             <a href="download.php">Download</a>
+        </div>
+        <div class="upload-btn">
+            <a href="smtp.php">IAMP</a>
         </div>
     </div>
 </body>
